resolve issues